# CG1_WS24

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  README.md  ex2.cpp
camera/: perspectivecamera.cpp  perspectivecamera.h
common/: ray.cpp  ray.h  texture.cpp
data/: README.txt
light/: pointlight.cpp  pointlight.h
primitive/: box.cpp  infiniteplane.cpp  sphere.cpp  triangle.cpp  triangle.h
renderer/: kdtreerenderer.cpp  simplerenderer.cpp  simplerenderer.h
scene/: fastscene.cpp  scene.cpp  scene.h
shader/: brdfshader.cpp  cooktorranceshader.cpp  lambertshader.cpp  mirrorshader.cpp  phongshader.cpp  refractionshader.cpp  simpleshadowshader.cpp
